--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,10 +5,10 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="images/slide-1.png" alt="Second slide">
+        <img class="d-block w-100" src="images/slide-1.png" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="images/slide-2.png" alt="Third slide">
+        <img class="d-block w-100" src="images/slide-2.png" alt="Second slide">
       </div>
     </div>
   </div>
